# NetEngine

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPOSE_BRAINSTORM.md  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yml  netengines_state.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
compose/: README.md  bandersnatch.conf  chaos-scenarios.sh  compose.analytics.yml  compose.api-gateway.yml  compose.arm64.yml  compose.audit.yml  compose.backup-recovery.yml  compose.benchmarks.yml  compose.billing.yml  compose.cache-redis.yml  compose.chaos-db.yml  compose.chaos-network.yml  compose.database-variants.yml  compose.debug.yml  compose.dev-hotreload.yml  compose.domain-registrar.yml  compose.exporters.yml  compose.federation.yml  compose.forms.yml  compose.gpu.yml  compose.keycloak-multi-realm.yml  compose.knowledge-base.yml  compose.load-test.yml  compose.mail-visual.yml  compose.marketplace.yml  compose.media-hosting.yml  compose.message-queues.yml  compose.messaging.yml  compose.multi-world.yml  compose.oauth-provider-test.yml  compose.observability.yml  compose.offline.yml  compose.resource-constrained.yml  compose.resource-manager.yml  compose.search-engine.yml  compose.security.yml  compose.service-catalog.yml  compose.ssl-testing.yml  compose.state-replay.yml  (+44 more)
docs/: COMPREHENSIVE_GAP_ANALYSIS.md  GAP_SUMMARY.txt  M2_AUDIT_FINDINGS.md  PROJECT_AUDIT_P1VL28.md  SUPABASE_SETUP.md  adr-authority-autonomous-internet-runtime.md  alpha-quickstart.md  compose-brainstorm.md  decisions.md  known-limitations.md  licenses.md  m1-implementation.md  migrations.md  netengines-briefing-v1.html  netengines-mvp-roadmap-v1.html  netengines-spec-v1.yaml  netengines-technical-v1.html  networking.md  operator-guide.md  repo-setup.txt  runbook.md  security-model.md  spec-alpha-support.md  spec-reference.md  state-and-backups.md  structure.txt  supply-chain.md  support-matrix.md  troubleshooting.md
docs/release-notes/: 0.1.0-alpha.1.md
examples/: dev-sandbox.yaml  minimal.yaml  single-org.yaml  spec.base.yaml  spec.dev.yaml  spec.prod.yaml
migrations/: 001_initial.sql
netengine/: __init__.py  errors.py  phase_labels.py
netengine/api/: app.py  auth.py  routes.py
netengine/cli/: doctor.py  env.py  init_wizard.py  main.py
netengine/config/: __init__.py  loader.py  runtime.py  schemas.py  spec_config.py
netengine/connectors/: __init__.py  base.py  docker_connector.py  keycloak_connector.py  pgmq_connector.py  postgres_connector.py
netengine/core/: consumer_supervisor.py  db_client.py  docker_factory.py  drift_controller.py  migrations.py  orchestrator.py  pgmq_client.py  phase_graph.py  reload.py  self_healing.py  state.py  supabase_client.py
netengine/db/: migrations.py
netengine/diagnostic/: __init__.py  db_doctor.py  preflight.py  runner.py
netengine/diagnostic/probes/: acme.py  dns.py  events.py  mail.py  network.py  oidc.py  pki.py  storage.py  whois.py
netengine/events/: __init__.py  emitter.py  factory.py  payloads.py  queues.py  schema.py
netengine/gateways/: __init__.py  base.py
netengine/handlers/: __init__.py  and_handler.py  app_handler.py  base.py  context.py  dns.py  docker_handler.py  domain_registry_handler.py  gateway_handler.py  gateway_portal_handler.py  mail_handler.py  minio_handler.py  oidc_handler.py  phase_pki.py  pki_handler.py  protocols.py  substrate.py  whois_server.py  world_registry_handler.py
netengine/hooks/: __init__.py  base.py  logging_hook.py  metrics_hook.py
netengine/logging/: __init__.py  core.py  logger.py  middleware.py  sinks.py  trace.py
netengine/logs/: __init__.py  core.py  middleware.py  sinks.py  trace.py
netengine/monitoring/: __init__.py  metrics.py  service.py
netengine/phases/: phase_ands.py  phase_inworld_identity.py  phase_platform_identity.py  phase_registries.py  phase_services.py
netengine/security/: __init__.py  redaction.py
netengine/spec/: __init__.py  authority.py  feature_state.py  loader.py  models.py  types.py
netengine/utils/: migration_service.py  migrations.py  run_migrations.py
netengine/workers/: __init__.py  base.py  dlq_worker.py  dns_updates_worker.py  org_admission_worker.py  pki_cert_rotation_worker.py  registry.py
scripts/: README.md  generate_license_list.py  install_pgmq.sh  setup_supabase.py  setup_supabase.sh  test_supabase_setup.sh  validate_supply_chain.py
tests/: __init__.py  conftest.py  test_and_profiles.py  test_api_admin_guards.py  test_api_auth.py  test_api_replay_dlq.py  test_app_handler.py  test_authority_spec.py  test_background_workers.py  test_cli.py  test_config.py  test_context.py  test_diagnostic_runner.py  test_doctor.py  test_drift_controller.py  test_errors.py  test_event_factories.py  test_event_queue_dlq_mapping.py  test_feature_states.py  test_gateway_federation.py  test_gateway_handler.py  test_gateway_portal.py  test_m1_handlers.py  test_m2_handlers.py  test_migration_ledger.py  test_migration_queues.py  test_migration_service.py  test_orchestrator_spec_normalization.py  test_pgmq_emitters.py  test_phase_ands_strengthening.py  test_phase_services_consumer.py  test_pki_features.py  test_readiness_cli.py  test_registry_handlers.py  test_runtime_state.py  test_spec_parsing.py
tests/fixtures/: e2e-spec.yaml
tests/integration/: __init__.py  test_dns_add_zone_record_callers.py  test_drift_detection.py  test_e2e_bootstrap.py  test_e2e_federation.py  test_e2e_fullstack.py  test_m1_m2_bootstrap.py  test_m3_bootstrap.py  test_m4_phases.py  test_m5_registries.py  test_m6_inworld_identity.py  test_m7_ands.py  test_m8_mail.py  test_m8_operator_api.py  test_migrations_postgres_pgmq.py  test_orchestrator_m3.py  test_phase4_platform.py  test_phase5_registries.py
