[tool.poetry]
name = "netengine"
version = "0.1.0"
description = "NetEngines: Self-contained, authority-autonomous digital worlds"
authors = ["NetEngine Team <team@netengine.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5"
pyyaml = "^6.0"
structlog = "^24.1.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
mypy = "^1.7"
types-PyYAML = "^6.0"
black = "^24.1"
isort = "^5.13"
flake8 = "^6.1"
pre-commit = "^3.5"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires Docker)",
    "slow: Slow tests",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = ["tests"]
