[tool.poetry]
name = "netengine"
version = "0.1.0"
description = "NetEngines: Self-contained, authority-autonomous digital worlds"
authors = ["NetEngine Team <team@netengine.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.13"
pyyaml = "^6.0"
structlog = "^24.1.0"
python-dotenv = "^1.0"
loguru = "^0.7"
docker = "^7.0"
aiohttp = "^3.9"
supabase = "^2.0"
fastapi = ">=0.115"
omegaconf = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
mypy = "^1.7"
types-PyYAML = "^6.0"
black = "^24.1"
isort = "^5.13"
flake8 = "^6.1"
pre-commit = "^3.5"

[tool.mypy]
strict = true
python_version = "3.13"
exclude = [
    "netengine/api/",
    "netengine/cli/",
    "netengine/phases/",
    "netengine/core/orchestrator\\.py",
    "netengine/core/pgmq_client\\.py",
    "netengine/core/supabase_client\\.py",
    "netengine/utils/",
    "netengine/handlers/pki_handler\\.py",
    "netengine/handlers/phase_pki\\.py",
    "netengine/handlers/oidc_handler\\.py",
    "netengine/handlers/gateway_handler\\.py",
    "netengine/handlers/docker_handler\\.py",
    "netengine/handlers/and_handler\\.py",
    "netengine/handlers/domain_registry_handler\\.py",
    "netengine/handlers/mail_handler\\.py",
    "netengine/handlers/minio_handler\\.py",
    "netengine/handlers/app_handler\\.py",
    "netengine/handlers/whois_server\\.py",
    "netengine/handlers/world_registry_handler\\.py",
    "netengine/logging/middleware\\.py",
    "netengine/logging/sinks\\.py",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires Docker)",
    "slow: Slow tests",
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    "tests",
    "netengine/phases",
    "netengine/utils",
    "netengine/api",
    "netengine/cli",
    "netengine/core/orchestrator.py",
    "netengine/core/pgmq_client.py",
    "netengine/core/supabase_client.py",
    "netengine/handlers/pki_handler.py",
    "netengine/handlers/phase_pki.py",
    "netengine/handlers/oidc_handler.py",
    "netengine/handlers/gateway_handler.py",
    "netengine/handlers/docker_handler.py",
    "netengine/handlers/and_handler.py",
    "netengine/handlers/domain_registry_handler.py",
    "netengine/handlers/mail_handler.py",
    "netengine/handlers/minio_handler.py",
    "netengine/handlers/app_handler.py",
    "netengine/handlers/whois_server.py",
    "netengine/handlers/world_registry_handler.py",
    "netengine/logging/middleware.py",
    "netengine/logging/sinks.py",
]
