[tool.poetry]
name = "netengine"
version = "0.1.0"
description = "NetEngines: Self-contained, authority-autonomous digital worlds"
authors = ["NetEngine Team <team@netengine.io>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
netengine = "netengine.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.13"
pyyaml = "^6.0"
structlog = "^24.1.0"
python-dotenv = "^1.0"
loguru = "^0.7"
docker = "^7.0"
aiohttp = "^3.9"
dnspython = "^2.6"
asyncpg = "^0.30"
supabase = "^2.0"
fastapi = ">=0.115"
omegaconf = "^2.3"
prometheus-client = "^0.25.0"
cryptography = ">=44,<49"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
mypy = "^1.7"
types-PyYAML = "^6.0"
black = "^24.1"
isort = "^5.13"
flake8 = "^6.1"
pre-commit = "^3.5"
httpx = "^0.28.1"

[tool.mypy]
strict = true
python_version = "3.13"
exclude = [
    "netengine/api/",
    "netengine/cli/",
    "netengine/phases/",
    "netengine/handlers/substrate\\.py",
    "netengine/handlers/dns\\.py",
    "netengine/handlers/pki_handler\\.py",
    "netengine/handlers/phase_pki\\.py",
    "netengine/handlers/oidc_handler\\.py",
    "netengine/handlers/mail_handler\\.py",
    "netengine/handlers/minio_handler\\.py",
    "netengine/handlers/whois_server\\.py",
    "netengine/logging/middleware\\.py",
    "netengine/logging/sinks\\.py",
]

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires Docker)",
    "slow: Slow tests (image pulls, Keycloak startup, etc.)",
    "e2e: Full-stack tests against live Docker infrastructure (--run-e2e to enable)",
]
